deploy/base/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: swkoo-frontend
  namespace: swkoo
  labels:
    app: swkoo-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: swkoo-frontend
  template:
    metadata:
      labels:
        app: swkoo-frontend
    spec:
      imagePullSecrets:
        - name: ocir-credentials
      containers:
        - name: frontend
          image: nrt.ocir.io/nrznn4yiltsz/swkoo/frontend:f42e1e7bb1412dd112970cc938f9d58aea534ad8
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              name: http
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 30
            periodSeconds: 20
          resources:
            requests:
              cpu: 150m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
